ported data gen